--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ data/
 HiC-Pro_2.11.3-beta/
 bowtie2-2.2.4/
 results/
+annotation/hg38_arima.bed
+annotation/hg38_hindiii.bed
+annotation/hg38.chrom.sizes
+annotation/hg38_dpnii.bed
